<resources>
    <string name="app_name">TaskPixie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_message">Welcome To TaskPixie!</string>
    <string name="app_description">Welcome to TaskPixie, the enchanting task manager designed to bring a touch of magic to your everyday productivity.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_msg">Hello! Welcome to Task Pixie!</string>
    <string name="username_label">Username:</string>
    <string name="username_hint">Enter your username</string>
    <string name="email_label">Email:</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="confirm_password_label">Confirm Password:</string>
    <string name="confirm_password_hint">Confirm your Password</string>
    <string name="identity_label">Username or Email:</string>
    <string name="identity_hint">Enter your username or email</string>
    <string name="profile">Profile</string>
    <string name="user_username">username</string>
    <string name="user_email">useremail@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selected_image">Selected Image</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_projects">Projects</string>
    <string name="title_user_profile">Profile</string>
    <string name="projects">Projects Lists</string>
    <string name="add_project">Add Project</string>
    <string name="project_name_label">Project Name:</string>
    <string name="project_name_hint">Enter your project name</string>
    <string name="project_description_label">Description:</string>
    <string name="project_description_hint">Enter project description</string>
    <string name="add_task">Add Task</string>
    <string name="title_label">Title:</string>
    <string name="title_hint">Enter your title</string>
    <string name="task_description_label">Description:</string>
    <string name="task_description_hint">Enter your description</string>
    <string name="greets_user">Welcome, %1$s!</string>
    <string name="greets_msg">Have a Nice day!</string>
    <string name="search_name">Find tasks</string>
    <string name="low_priority">Low</string>
    <string name="high_priority">High</string>
    <string name="urgent_priority">Urgent</string>
    <string name="todo_tasks">To Do</string>
    <string name="in_progress_tasks">In Progress</string>
    <string name="completed_tasks">Completed</string>
    <string name="filter">Filter</string>
    <string name="missing_tasks">Missing</string>
    <string name="title">Title</string>
    <string name="priority">Priority</string>
    <string name="description">Lorem Ipsum Dolor Sit Amet</string>
    <string name="project_task">Project</string>
    <string name="priority_label">Priority:</string>
    <string name="task_due_date_label">Due Date:</string>
    <string name="task_due_date_hint">Enter your due date</string>
    <string name="status_label">Status:</string>
    <string name="task_project_label">Project:</string>
    <string name="assigned_to_label">Assigned To:</string>
    <string name="select_project">Select a project</string>
    <string name="add_member">Add Member</string>
    <string name="detail_label">Detail:</string>
    <string name="detail_hint">Enter your detail</string>
    <string name="status">Status</string>
    <string name="created_at">Created At</string>
    <string name="updated_at">Updated At</string>
    <string name="date">2024-20-15</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="members_label">Members:</string>
    <string name="progress">Progress:</string>
    <string name="tasks">Tasks List:</string>
    <string name="search_member_hint">Enter user\'s username to get added</string>
    <string name="remove_user">Remove User</string>
    <string name="logout">Log out</string>

    <!-- Task Priorities Array -->
    <string-array name="task_priorities">
        <item>Low</item>
        <item>High</item>
        <item>Urgent</item>
    </string-array>

    <!-- Task Statuses Array -->
    <string-array name="task_statuses">
        <item>To Do</item>
        <item>In Progress</item>
        <item>Completed</item>
        <item>Canceled</item>
        <item>Missing</item>
    </string-array>

    <!-- Task Projects Array (sample projects, you might want to populate this dynamically) -->
    <string-array name="task_projects">
        <item>@string/select_project</item>
        <item>Project 1</item>
        <item>Project 2</item>
        <item>Project 3</item>
        <item>Project 4</item>
    </string-array>
</resources>