<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="35dp"
    tools:context=".fragment.EditProfileFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/edit_profile"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="25sp" />

    <!-- Form -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_avatar"
        android:layout_width="wrap_content"
        android:layout_height="225dp"
        android:src="@drawable/anonym"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/selected_image" />

    <TextView
        android:id="@+id/username_label"
        style="@style/Label"
        android:text="@string/username_label" />
    <EditText
        android:id="@+id/username_input"
        style="@style/Input"
        android:autofillHints="username"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:labelFor="@id/username_label" />

    <TextView
        android:id="@+id/email_label"
        style="@style/Label"
        android:layout_marginTop="10dp"
        android:text="@string/email_label" />
    <EditText
        android:id="@+id/email_input"
        style="@style/Input"
        android:autofillHints="email"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:labelFor="@id/email_label" />

    <TextView
        android:id="@+id/password_label"
        style="@style/Label"
        android:layout_marginTop="10dp"
        android:text="@string/password_label" />
    <EditText
        android:id="@+id/password_input"
        style="@style/Input"
        android:autofillHints="password"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:labelFor="@id/password_label" />

    <TextView
        android:id="@+id/confirm_password_label"
        style="@style/Label"
        android:layout_marginTop="10dp"
        android:text="@string/confirm_password_label" />
    <EditText
        android:id="@+id/confirm_password_input"
        style="@style/Input"
        android:autofillHints="confirm_password"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:labelFor="@id/confirm_password_label" />

    <android.widget.Button
        android:id="@+id/edit_profile_btn"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/primary"
        android:backgroundTintMode="src_atop"
        android:text="@string/edit_profile"
        android:textColor="@color/white" />
</LinearLayout>
