<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/primary"
    android:orientation="vertical"
    android:paddingHorizontal="25dp"
    tools:context=".fragment.WelcomeFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/app_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/app_description"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <android.widget.Button
        android:id="@+id/login_btn"
        style="@style/PrimaryButton"
        android:layout_marginBottom="20dp"
        android:textColor="@color/primary"
        android:text="@string/login" />

    <android.widget.Button
        android:id="@+id/register_btn"
        style="@style/PrimaryButton"
        android:textColor="@color/primary"
        android:text="@string/register" />

</LinearLayout>