<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    tools:context=".fragment.UserFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginBottom="25dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_avatar"
        android:layout_width="wrap_content"
        android:layout_height="225dp"
        android:src="@drawable/anonym"
        android:layout_marginBottom="20dp"/>

    <!-- Username and Password -->
    <TextView
        android:id="@+id/user_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/inter_bold"
        android:textSize="20sp"
        android:text="@string/user_username" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/inter_regular"
        android:textSize="18sp"
        android:text="@string/user_email" />

    <!-- Edit Profile form -->

    <android.widget.Button
        android:id="@+id/edit_profile_btn"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/primary"
        android:backgroundTintMode="src_atop"
        android:text="@string/edit_profile"
        android:textColor="@color/white" />

</LinearLayout>