<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.TaskDetailFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <TextView
                android:id="@+id/task_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:fontFamily="@font/poppins_bold"
                android:layout_gravity="center_horizontal"
                android:text="@string/title"
                android:includeFontPadding="false"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/task_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="@drawable/rounded_shape"
                    android:backgroundTint="@color/green"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/white"
                    android:text="@string/status"
                    android:layout_marginEnd="8dp"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/task_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="@drawable/rounded_shape"
                    android:backgroundTint="@color/purple"
                    android:textColor="@color/white"
                    android:text="@string/priority"
                    android:fontFamily="@font/poppins_bold"
                    android:textAlignment="center" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="30dp">

                <TextView
                    android:id="@+id/task_created_at_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/created_at"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/task_created_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="12sp"
                    android:fontFamily="@font/inter_regular"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/task_created_at_label" />

                <TextView
                    android:id="@+id/task_updated_at_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/updated_at"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/task_updated_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="12sp"
                    android:fontFamily="@font/inter_regular"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/task_updated_at_label" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_description_label"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                app:drawableStartCompat="@drawable/ic_tasks"
                android:drawablePadding="5dp"/>

            <TextView
                android:id="@+id/task_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_label"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                app:drawableStartCompat="@drawable/ic_tasks"
                android:drawablePadding="5dp"/>

            <TextView
                android:id="@+id/task_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_name_label"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:gravity="start|center"
                app:drawableStartCompat="@drawable/ic_project"
                android:drawablePadding="5dp"/>

            <TextView
                android:id="@+id/task_project"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Project"
                android:layout_marginTop="8dp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/task_assigned_to_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/assigned_to_label"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                app:drawableStartCompat="@drawable/ic_people"
                android:drawablePadding="5dp"/>

            <TextView
                android:id="@+id/task_assigned_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Assigned To"
                android:layout_marginTop="8dp"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_due_date_label"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                app:drawableStartCompat="@drawable/ic_date"
                android:drawablePadding="5dp"/>
            <TextView
                android:id="@+id/task_due_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </ScrollView>

    <!-- Add the buttons at the bottom -->
    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <android.widget.Button
            android:id="@+id/update_task_btn"
            style="@style/PrimaryButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:text="@string/update"
            android:textColor="@color/white" />

        <android.widget.Button
            android:id="@+id/delete_task_btn"
            style="@style/PrimaryButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/red"
            android:text="@string/delete"
            android:textColor="@color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
