<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top|center"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/projects"
            android:textSize="24sp"
            android:textColor="@color/purple"
            android:fontFamily="@font/poppins_bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <android.widget.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/PrimaryButton"
                android:backgroundTint="@color/primary"
                android:text="@string/low_priority"
                android:drawableTop="@drawable/ic_low_priority"
                android:drawableTint="@color/white"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:padding="10dp"/>

            <android.widget.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/PrimaryButton"
                android:backgroundTint="@color/primary"
                android:text="@string/high_priority"
                android:drawableTop="@drawable/ic_exclamation"
                android:drawableTint="@color/white"
                android:textColor="@color/white"
                android:layout_marginHorizontal="20dp"
                android:textSize="20sp"
                android:padding="10dp"/>

            <android.widget.Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/PrimaryButton"
                android:backgroundTint="@color/primary"
                android:text="@string/urgent_priority"
                android:drawableTop="@drawable/ic_urgent"
                android:drawableTint="@color/white"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:padding="10dp"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/projectsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="440dp"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/primary"
        android:contentDescription="@string/add_project"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add"
        app:tint="@android:color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>
